<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawerLayout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="70sp"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/background"></androidx.appcompat.widget.Toolbar>


            <ImageView

                android:layout_width="200dp"
                android:layout_height="70dp"
                android:contentDescription="@string/title"
                android:paddingStart="0dp"
                android:paddingEnd="60dp"
                android:src="@drawable/title" />

            <TextView
                android:id="@+id/none"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textSize="22sp"
                android:fontFamily="@font/bmjua_ttf"
                android:textStyle="bold"
                android:text="버튼넣을곳"/>

        </LinearLayout>




        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/location"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="오늘 먹을 음식 : "
                android:gravity="center"
                android:fontFamily="@font/bmjua_ttf"
                android:layout_marginStart="20dp"

                android:textSize="25sp"
                android:textColor="@color/text_color_gray"/>

            <TextView
                android:id="@+id/result"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="여기 음식 먹을거 들어갈듯"

                android:fontFamily="@font/bmjua_ttf"

                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="@color/text_color_gray"/>


        </LinearLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/location2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/bmjua_ttf"
                android:gravity="center"
                android:text="@string/food_country"
                android:textColor="@color/text_color_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp"
                    >

                    <CheckBox
                        android:id="@+id/koreaFBT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        app:buttonTint="#FF5722"></CheckBox>
                    <ImageView
                        android:id="@+id/koreaF"
                        android:tag="koreaF"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:onClick="on_Click"
                        android:src="@drawable/south_korea"
                        android:contentDescription="@string/koreaF"
                        tools:ignore="UsingOnClickInXml"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/koreaF"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/bmjua_ttf"
                        android:textColor="@color/text_color_gray"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <CheckBox
                        android:id="@+id/chinaFBT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        app:buttonTint="#FF5722"></CheckBox>
                    <ImageView
                        android:id="@+id/chinaF"
                        android:tag="chinaF"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:onClick="on_Click"
                        android:layout_gravity="center"
                        android:src="@drawable/china"
                        android:contentDescription="@string/chinaF"
                        tools:ignore="UsingOnClickInXml" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chinaF"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/bmjua_ttf"
                        android:textColor="@color/text_color_gray"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="30dp">

                    <CheckBox
                        android:id="@+id/japanFBT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        app:buttonTint="#FF5722"></CheckBox>
                    <ImageView
                        android:id="@+id/japanF"
                        android:tag="japanF"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:onClick="on_Click"
                        android:src="@drawable/japan"
                        android:contentDescription="@string/japanF"
                        tools:ignore="UsingOnClickInXml" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/japanF"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/bmjua_ttf"
                        android:textColor="@color/text_color_gray"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp">

                    <CheckBox
                        android:id="@+id/westFBT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        app:buttonTint="#FF5722"></CheckBox>
                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/westF"
                        android:tag="westF"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:onClick="on_Click"
                        android:src="@drawable/steak"
                        android:contentDescription="@string/westF"
                        tools:ignore="UsingOnClickInXml" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/westF"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/bmjua_ttf"
                        android:textColor="@color/text_color_gray"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <CheckBox
                        android:id="@+id/fastFBT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        app:buttonTint="#FF5722"></CheckBox>
                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/fastF"
                        android:tag="fastF"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:onClick="on_Click"
                        android:src="@drawable/fast_food"
                        android:contentDescription="@string/fastF"
                        tools:ignore="UsingOnClickInXml" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/bmjua_ttf"
                        android:gravity="center"
                        android:text="@string/fastF"
                        android:textColor="@color/text_color_gray"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout

                    android:layout_weight="1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="30dp">

                    <CheckBox
                        android:id="@+id/asiaFBT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        app:buttonTint="#FF5722"></CheckBox>
                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/asiaF"
                        android:tag="asiaF"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:onClick="on_Click"
                        android:src="@drawable/asian_food"
                        android:contentDescription="@string/asiaF"
                        tools:ignore="UsingOnClickInXml" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asiaF"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/bmjua_ttf"
                        android:textColor="@color/text_color_gray"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            tools:ignore="UseCompoundDrawables"
            android:background="@color/background">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background ="@drawable/add_btn"
                android:onClick="goto_AddFood"
                android:layout_weight="1"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background ="@drawable/show_list_btn"
                android:onClick="goto_ALLSelectMenu"
                android:layout_weight="1"
                android:contentDescription="@string/button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/background">
            <ImageButton
                android:id="@+id/rb"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@drawable/gotoroulette"
                android:layout_weight="1"
                android:contentDescription="@string/button"
                android:onClick="goto_Roulette"/>

            <ImageButton
                android:id="@+id/gotomap"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/map_btn"
                android:contentDescription="@string/button"
                android:onClick="goto_map"/>

        </LinearLayout>
    </LinearLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_layout"
        app:menu="@menu/navigation_menu">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>

